# GALEOS

./: Dockerfile  README.md  main.py  prometheus.yml  pyproject.toml
dataset_generator/: __init__.py  __main__.py  create_components.py  load_ground_topology.py
datasets/: dataset.json  dataset2.json  rnp.json
galeos/: __init__.py  component_manager.py  scheduler.py  simulator.py
galeos/components/: __init__.py  application.py  ground_station.py  network_flow.py  network_link.py  process_unit.py  satellite.py  topology.py  user.py
galeos/components/allocation_algorithms/: __init__.py  best_exposure_time.py  best_fit_allocation.py  less_allocation.py  random_allocation.py  simple_allocation.py
galeos/components/application_access_models/: __init__.py  cyclic_application_access_model.py  dynamic_duration_access_model.py  fixed_duration_access_model.py
galeos/components/mobility_models/: random_mobility_model.py
galeos/components/schedulers/: __init__.py  default_scheduler.py
galeos/components/topology_management_algorithms/: __init__.py  barabasi_albert_topology_management.py  (+1 more)
galeos/mobility_models/: __init__.py  coordinates_history.py  linear_estimation.py  random_mobility_model.py
galeos/orbit_models/: linear_estimation.py
public/: index.html
server/: __init__.py  satellite_tracker_gui.py
server/static/: scripts.js  styles.css
server/templates/: index.html
tutorials/compare_algorithms/: dataset.py  main.py  plot.py
tutorials/customizing_galeos/: helper_methods.py  main.py
tutorials/my_first_algorithm/: dataset.py  main.py  plot.py
(+18 files in other folders)
