[project]
name = "galeos"
version = "0.1.0"
description = ""
authors = [
    {name = "diogo2m"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx (>=3.4.2,<4.0.0)",
    "prometheus-client (>=0.21.1,<0.22.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
